[Modern Java In Action] Chapter 4. 스트림 소개 (p.135~140)