@@ -2,6 +2,7 @@ package study.modern_java_in_action.model;
 
 import lombok.Data;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Data
@@ -11,10 +12,10 @@ public class Apple {
     private final Color color;
 
     public static List<Apple> exampleAppleList() {
-        return List.of(
-                new Apple(80, Color.GREEN),
-                new Apple(155, Color.GREEN),
-                new Apple(120, Color.RED)
+        return Arrays.asList(
+            new Apple(80, Color.GREEN),
+            new Apple(155, Color.GREEN),
+            new Apple(120, Color.RED)
         );
     }
 
